@@ -18,6 +18,7 @@ man_MANS = as.1
 info_TEXINFOS = as.texinfo 
 
 AM_MAKEINFOFLAGS = -I "$(srcdir)" -I "$(top_srcdir)/../libiberty"
+TEXI2DVI = texi2dvi -I "$(srcdir)" -I "$(top_srcdir)/../libiberty"
 
 asconfig.texi: $(CONFIG).texi
 	rm -f asconfig.texi
